- Updated search and info card style -- Fixed scrollbars on Windows - Loading screen image is preloaded - Fixed saturn image

--- a/public/style.css
+++ b/public/style.css
@@ -33,6 +33,10 @@
     font-family: "Hubot Sans","Hubot Sans Fallback","Roboto",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
 
+html {
+    background-color: black;
+}
+
 html,
 body
 {
